hands-on-projects/project-09-disaster-recovery/main/solution/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dr-app
  namespace: dr-lab
  labels:
    app: dr-app
spec:
  selector:
    app: dr-app
  ports:
  - name: http
    port: 4545
    targetPort: 4545
    nodePort: 30945
  type: NodePort
